welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:4: error: value =< is not a member of Int
  } else if (( n>=10 || n=<1 ) && outsideMode == true) {
                         ^